Ship broadcast via HTTP Live Streaming #179453189 (#26)
Also:
* Typesafe config is only used for interior of Template/Program/Instrument #179675488
* Refactor tf -> .ops
* Don't return expired template playbacks
* Fix deprecated Integer API